Modify the webpage 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title><!-- Your Name – CS & Math Student --></title>
+  <title>Xuanyu Pan – CS &amp; Math Student</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
@@ -77,7 +77,7 @@
 </head>
 <body>
   <header>
-    <h1><!-- Your Name Here --></h1>
+    <h1>Xuanyu Pan</h1>
     <p>Computer Science &amp; Mathematics Student</p>
   </header>
 
@@ -94,32 +94,35 @@
     <div>
       <section id="about">
         <h2>About Me</h2>
-        <p><!-- A short bio: your year, interests in CS/Math, campus life… --></p>
+        <p>
+          I’m a junior at USC studying Computer Science and Mathematics. I’m passionate about algorithms, web development, and data analysis. On campus I’m an active member of ACM and the Math Club.
+        </p>
       </section>
 
       <section id="projects">
         <h2>Projects</h2>
         <ul>
-          <li><strong><!-- Project Name --></strong> – <!-- Brief description, tech used --></li>
-          <!-- Repeat as needed -->
+          <li><strong>Events@USC</strong> – Android app for event discovery using Java &amp; Kotlin</li>
+          <li><strong>Minesweeper App</strong> – Dynamic grid‐based game implemented in Java (Android)</li>
+          <li><strong>Grade Calculator</strong> – Web form to calculate weighted grades using HTML, CSS &amp; JavaScript</li>
         </ul>
       </section>
 
       <section id="skills">
         <h2>Skills</h2>
-        <p><!-- e.g. Python, C++, Linear Algebra, Data Structures… --></p>
+        <p>Python, Java, C++, JavaScript, Data Structures &amp; Algorithms, Linear Algebra, Differential Equations</p>
       </section>
 
       <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:<!-- your.email@example.com -->"><!-- your.email@example.com --></a></p>
-        <p>GitHub: <a href="https://github.com/<!-- your-username -->"><!-- your-username --></a></p>
+        <p>Email: <a href="mailto:xuanyupa@usc.edu">xuanyupa@usc.edu</a></p>
+        <p>GitHub: <a href="https://github.com/xuanyupa">xuanyupa</a></p>
       </section>
     </div>
   </main>
 
   <footer>
-    &copy; <!-- Year --> <!-- Your Name -->
+    &copy; 2025 Xuanyu Pan
   </footer>
 </body>
 </html>
