--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <!-- Custom Styles -->
   <link rel="stylesheet" href="assets/style.css">
 </head>
+
+<script src="assets/script.js" defer></script>
+</body>
+</html>
+
 <body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-gray-100 font-montserrat transition-colors duration-300">
 
   <!-- Theme Toggle -->
@@ -108,8 +113,14 @@
       <ul class="flex flex-wrap justify-center gap-4 text-gray-700 dark:text-gray-300">
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">Python</li>
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">Java</li>
+        <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">C</li>
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">C++</li>
+        <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">HTML</li>
+        <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">CSS</li>
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">JavaScript</li>
+        <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">Dart</li>
+        <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">MATLAB</li>
+        <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">LaTex</li>
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">Data Structures</li>
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">Algorithms</li>
         <li class="px-4 py-2 bg-indigo-100 dark:bg-indigo-900 rounded-full">Linear Algebra</li>
